--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,23 +66,34 @@ section{
 /*hero style start*/
 .hero{
     background-image: url("../images/hero-bg.jpg");
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position:relative;
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-/*hero style end*/
+.hero-cta{
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2{
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+}
 .hero-form{
     background-color:#fce138;
     color: #024e76;
     padding: 20px;
-    width:500px;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    width: 40%;
+    margin: 3.5%;
 }
 .hero-form p{
     margin: 5px 0 15px 0;
@@ -110,6 +121,7 @@ section{
     padding: 10px 20px;
     font-size:16px;
 }
+/*hero end*/
 .intro {
     text-align: center;
 }
