center section titles with flexbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,8 +122,8 @@ section{
     font-size:16px;
 }
 /*hero end*/
-.intro {
-    text-align: center;
+.flex-row{
+    display:flex;
 }
 .intro p{
     line-height: 1.7;
@@ -131,6 +131,7 @@ section{
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps {
     text-align: center;
@@ -139,10 +140,11 @@ section{
 .section-title{
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border{
     border-color: #fce138;
